--- a/flo/Cargo.toml
+++ b/flo/Cargo.toml
@@ -22,6 +22,13 @@ branch = "main"
 
 [dependencies.generic-array]
 version = "*"
-features = []
+features = [ "serde" ]
 git = "file:///git/github.com/fizyk20/generic-array"
+branch = "master"
+
+[dependencies.hashbrown]
+version = "*"
+default-features = false
+features = [ "serde" ]
+git = "file:///git/github.com/rust-lang/hashbrown"
 branch = "master"
