--- a/flo/Cargo.toml
+++ b/flo/Cargo.toml
@@ -7,28 +7,11 @@ edition = "2018"
 
 [features]
 
-[dependencies.serde]
-version = "*"
-default-features = false
-features = [ "derive" ]
-git = "file:///git/github.com/serde-rs/serde"
-branch = "master"
+[dependencies]
+sajban = { version = "*", features = [], path = "../" }
 
 [dependencies.futures-micro]
 version = "*"
 features = []
 git = "file:///git/github.com/irrustible/futures-micro"
 branch = "main"
-
-[dependencies.generic-array]
-version = "*"
-features = [ "serde" ]
-git = "file:///git/github.com/fizyk20/generic-array"
-branch = "master"
-
-[dependencies.hashbrown]
-version = "*"
-default-features = false
-features = [ "serde" ]
-git = "file:///git/github.com/rust-lang/hashbrown"
-branch = "master"
