--- a/krios/Cargo.toml
+++ b/krios/Cargo.toml
@@ -6,7 +6,5 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies.sajban]
-version = "*"
-features = []
-path = "../"
+[dependencies]
+sajban = { version = "*", features = [], path = "../" }
